[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["nikita <misharinnikita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pylint = "^2.15.4"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.4"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
url-normalize = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
asyncio = "^3.4.3"
httpx = "^0.23.0"
SQLAlchemy-Utils = "^0.38.3"
ConfigArgParse = "^1.5.3"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
